poddcdr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: poddcdr
  name: poddcdr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poddcdr
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: poddcdr
        deployment: poddcdr
    spec:
      containers:
      - image: quay.io/summu85/pvc-quarkus:latest
        imagePullPolicy: IfNotPresent
        name: ocppvcquarkus
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /tmp
          name: poddcdrpvc
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: poddcdrpvc
        persistentVolumeClaim:
          claimName: poddcdrpvc
