poddcdr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: poddcdr
  name: poddcdrsvc
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: poddcdr
  sessionAffinity: None
  type: ClusterIP
