poddcdr/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: poddcdr
  name: poddcdrroute
  namespace: default
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: poddcdrsvc 
    weight: 100
  wildcardPolicy: None
